@@ -11,7 +11,8 @@ Default Qt Client
 - All byte sizes converted to local format
 - Option to use TeamTalk Sound Output device for default sound event playback mode
 - Option to choose bitween text or emoji for user and channel info in channel list
-- Last login time display in "User Accounts" dialog
+- Last login time shown in "User Accounts" dialog
+- Ability to sort by "Last Login Time" in "User Accounts" dialog
 - Fixed gender changed from female to male when migrating to 5.17 release
 - Fixed sound events disabled when migrating to 5.17 release
 - Fixed language not set at first start
